--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,16 @@
-.App {
-  text-align: center;
+.apexcharts-tooltip {
+  background: #f3f3f3;
+  box-shadow: rgba(0, 0, 0, 0.25);
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+.apexcharts-yaxistooltip.apexcharts-active,
+.apexcharts-xaxistooltip.apexcharts-active {
+  background: rgba(0, 0, 0, 0.85);
   color: white;
+  border-radius: 6px;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.apexcharts-yaxistooltip-left:after,
+.apexcharts-yaxistooltip:after {
+  display: none;
 }
